@@ -1,3 +1,12 @@
+2006-11-11  Marco Antonio Porcho Souza  <maporcho@gmail.com>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/datatypes.py (_BaseDateTimeConverter._convert_format): 
+	Use YYYY/mm/dd instead %Y/%m/%d in error messages.
+
+	Fixes #3041.
+
 2007-01-16  Johan Dahlin  <jdahlin@async.com.br>
 
 	* po/fr.po: Added French translation contributed by Benoit Myard.
